<?xml version="1.0" encoding="UTF-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	  	android:title="@string/text_settings_syncPref"
	    android:key="pref_key_sync">
	    <CheckBoxPreference
	        android:key="pref_key_refresh"
	        android:title="@string/text_autoRefreshAll"
	        android:summary="@string/text_autoRefreshAll_summary"
	        android:defaultValue="true"/>
	    <CheckBoxPreference
	        android:key="pref_auto_refresh_selected_device" 
	        android:dependency="pref_key_refresh"
	        android:title="@string/text_autoRefreshSelectedDevice"
	        android:summary="@string/text_autoRefreshSelectedDevice_summary"
	        android:defaultValue="false"/>
	    
	    <!--  
	    <ListPreference
	        android:dependency="pref_auto_sync_device"
	        android:key="pref_key_sync_device"
	        android:title="Device Sync Time"
	        android:dialogTitle="Sync in seconds"
	        android:entries="@array/pref_device_entries"
	        android:entryValues="@array/pref_device_values"
	        >
	    </ListPreference>
	    -->
	    

	    <CheckBoxPreference
	        android:key="pref_auto_refresh_all_devices" 
	        android:dependency="pref_key_refresh"
	        android:title="@string/text_autoRefershAllDevices"
	        android:summary="@string/text_autoRefreshAllDevices_summary"
	        android:defaultValue="false"/>
    </PreferenceCategory>
	    
	    <!--  
	    <ListPreference
	        android:dependency="pref_key_refresh"
	        android:key="pref_key_sync_panel"
	        android:title="Panel Sync Time"
	        android:dialogTitle="Sync in Minutes"
	        android:entries="@array/pref_panel_entries"
	        android:entryValues="@array/pref_panel_values"
	        >
	    </ListPreference>
	    -->


    <PreferenceCategory
        android:title="@string/pref_category_custom"
        android:key="pref_custom_display">
        <CheckBoxPreference
            android:key="pref_icon_checkbox"
            android:title="@string/pref_title_customIcon_checkbox"
            android:defaultValue="false">

        </CheckBoxPreference>
        <Preference
            android:key="pref_app_icons"
            android:title="@string/pref_title_customIcon"
            android:summary="@string/pref_subTitle_customIcon"
            android:icon="@drawable/mackwell_logo"
            android:defaultValue="test222"
            android:dependency="pref_icon_checkbox"
            >
        </Preference>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_panel_list_category"
        android:key="pref_cached_panel_list">
        <Preference
            android:key="pref_panel_list"
            android:title="@string/pref_panel_list"
            android:summary="@string/pref_panel_lists_summary"
            >
        </Preference>
    </PreferenceCategory>
    
</PreferenceScreen>
