<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/>
     
     
     
	<item
	        android:id="@+id/action_show_devices"
	        android:orderInCategory="102"
	        android:showAsAction="ifRoom"
	        android:icon="@drawable/ic_action_about"
	        android:title="@string/action_showDeviceList"
	        />     

    <!--refresh is removed from 0.9.1 -->
     <item
        android:id="@+id/action_refresh"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh_status"
        android:visible="false"/>

     
     
     
     
</menu>
